# ecs-framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: docs.yml
docs/: sim-diagram.excalidraw
examples/: CMakeLists.txt  Dummy.cpp  SheepAndWolves.cpp  SimpleRectangles.cpp  main.cpp
include/sim/: Concepts.h  Dispatcher.h  Entity.h  Event.h  Registry.h  Simulation.h  Storage.h  Systems.h  Traits.h  Types.h  View.h
include/sim/components/: Interactions.h  Sprite.h  Targets.h  Transform.h
include/sim/lib/components/: Interactions.h  Sprite.h  Targets.h  Transform.h
include/sim/lib/systems/: Interactor.h  Movement.h  Renderer.h  World.h
include/sim/lib/utils/: TransformUtils.h
include/sim/renderer/: Renderer.h
include/sim/systems/: Interactor.h  Movement.h  Renderer.h  World.h
include/sim/utils/: TransformUtils.h
src/: CMakeLists.txt  Renderer.cpp  main.cpp
src/sim/: Entity.h  Event.h  Simulation.h
src/systems/: Renderer.cpp
